--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@reduxjs/toolkit": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "redux-persist": "^6.0.0",
     "tss-react": "^4.9.3"
   },
   "devDependencies": {
