--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "recharts": "^2.12.0",
     "redux-persist": "^6.0.0",
+    "ts-transformer-keys": "^0.4.4",
     "tss-react": "^4.9.3"
   },
   "devDependencies": {
