--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.27",
     "@mui/material": "^5.15.4",
     "@reduxjs/toolkit": "^2.2.1",
+    "graphql-request": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
